--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "corderojoh.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "headshot.png"
+  avatar           : "Headshot.png"
   name             : "John Cordero"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
