--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Earth"
   employer         : "Comcast"
   uri              : # URL
-  email            : "jsea19@drexel.edu" 
+  email            : "jac673@drexel.edu" 
 
   # Academic websites
   academia         : # URL
