Update LinkedIn URL in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : corderojoh
+  linkedin         : https://www.linkedin.com/in/cordero-john/
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
