--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,16 +8,17 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications"
-    url: /publications/
-  - title: "Portfolio"
-    url: /portfolio/
-        
   - title: "Blog Posts"
     url: /year-archive/
-    
+  
   - title: "CV"
     url: /cv/
+  
+  - title: "Publications"
+    url: /publications/
+  
+  #- title: "Portfolio"
+   # url: /portfolio/
     
   #- title: "Talks"
    # url: /talks/    
