Update bio in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "Headshot.jpg"
   name             : "John Cordero"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Your friendly neighborhood security and privacy practitioner 🤘"
   location         : #"Earth"
   employer         : "Comcast"
   uri              : # URL
